--- a/replay-starter-js-master/web/index.html
+++ b/replay-starter-js-master/web/index.html
@@ -55,7 +55,7 @@
 
     .rules {
       padding-left: 0.5%;
-      padding-top: 0.5%;
+      padding-top: 0.2%;
       margin: auto;
       float: left;
       width: 33%;
@@ -70,8 +70,10 @@
   <div class="interactionMenu">
     <div class="numbers">
       <div class="rules">
-        <div>Dont let the enemies reach your base!</div>
-        <div>Solve the equation before the timer runs out!</div>
+        <div>Dont let Frieza reach you. Use 'space bar' to KAMEHAMEHA!</div>
+        <div>Eliminate Frieza to obtain numbers.</div>
+        <div>Solve the equation before the timer runs out, or lose a life.</div>
+        <div>Use '1', '2' or '3' to set the difficulty</div>
       </div>
     </div>
     <div class="numbers">
