--- a/replay-starter-js-master/web/index.html
+++ b/replay-starter-js-master/web/index.html
@@ -67,7 +67,7 @@
 </head>
 
 <body>
-  <div class="interactionMenu">
+  <div class="interactionMenu" id="interactionMenu">
     <div class="numbers">
       <div class="rules">
         <div>Dont let Frieza reach you. Use 'space bar' to KAMEHAMEHA!</div>
