added welcome-page rules

--- a/replay-starter-js-master/web/index.html
+++ b/replay-starter-js-master/web/index.html
@@ -11,6 +11,7 @@
       font: 1em sans-serif;
       height: 100px;
       background-color: lightblue;
+      display: none;
     }
 
     .numbers {
@@ -73,7 +74,7 @@
         <div>Dont let Frieza reach you. Use 'space bar' to KAMEHAMEHA!</div>
         <div>Eliminate Frieza to obtain numbers.</div>
         <div>Solve the equation before the timer runs out, or lose a life.</div>
-        <div>Use '1', '2' or '3' to set the difficulty</div>
+        <div>Use numbers '1', '2' or '3' to set the difficulty.</div>
       </div>
     </div>
     <div class="numbers">
